tntc/src/generated/.antlr/TntParser.java
// Generated from /home/gabriela/projects/tnt/tntc/src/generated/Tnt.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class TntParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, STRING=33, BOOL=34, INT=35, AND=36, OR=37, IFF=38, IMPLIES=39, 
		SUBSETEQ=40, IN=41, NOTIN=42, SET=43, LIST=44, MATCH=45, PLUS=46, MINUS=47, 
		MUL=48, DIV=49, MOD=50, GT=51, LT=52, GE=53, LE=54, NE=55, EQ=56, ASGN=57, 
		LPAREN=58, RPAREN=59, IDENTIFIER=60, SIMPLE_IDENTIFIER=61, LINE_COMMENT=62, 
		COMMENT=63, WS=64, MAP=65;
	public static final int
		RULE_module = 0, RULE_unit = 1, RULE_operDef = 2, RULE_qualifier = 3, 
		RULE_params = 4, RULE_instanceMod = 5, RULE_type = 6, RULE_typeUnionRecOne = 7, 
		RULE_expr = 8, RULE_unitOrExpr = 9, RULE_lambda = 10, RULE_identOrHole = 11, 
		RULE_identOrStar = 12, RULE_path = 13, RULE_lambdaOrExpr = 14, RULE_argList = 15, 
		RULE_normalCallName = 16, RULE_nameAfterDot = 17, RULE_operator = 18, 
		RULE_literal = 19;
	private static String[] makeRuleNames() {
		return new String[] {
			"module", "unit", "operDef", "qualifier", "params", "instanceMod", "type", 
			"typeUnionRecOne", "expr", "unitOrExpr", "lambda", "identOrHole", "identOrStar", 
			"path", "lambdaOrExpr", "argList", "normalCallName", "nameAfterDot", 
			"operator", "literal"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'module'", "'{'", "'}'", "'const'", "':'", "'var'", "'assume'", 
			"'='", "'type'", "'import'", "'.'", "';'", "'val'", "'def'", "'pure'", 
			"'action'", "'temporal'", "','", "'->'", "'=>'", "'int'", "'str'", "'bool'", 
			"'|'", "'['", "']'", "'^'", "'all'", "'any'", "'if'", "'else'", "'_'", 
			null, null, null, "'and'", "'or'", "'iff'", "'implies'", "'subseteq'", 
			"'in'", "'notin'", "'set'", "'list'", "'match'", "'+'", "'-'", "'*'", 
			"'/'", "'%'", "'>'", "'<'", "'>='", "'<='", "'!='", "'=='", "'<-'", "'('", 
			"')'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, "STRING", "BOOL", 
			"INT", "AND", "OR", "IFF", "IMPLIES", "SUBSETEQ", "IN", "NOTIN", "SET", 
			"LIST", "MATCH", "PLUS", "MINUS", "MUL", "DIV", "MOD", "GT", "LT", "GE", 
			"LE", "NE", "EQ", "ASGN", "LPAREN", "RPAREN", "IDENTIFIER", "SIMPLE_IDENTIFIER", 
			"LINE_COMMENT", "COMMENT", "WS", "MAP"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Tnt.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TntParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ModuleContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(TntParser.IDENTIFIER, 0); }
		public List<UnitContext> unit() {
			return getRuleContexts(UnitContext.class);
		}
		public UnitContext unit(int i) {
			return getRuleContext(UnitContext.class,i);
		}
		public ModuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_module; }
	}

	public final ModuleContext module() throws RecognitionException {
		ModuleContext _localctx = new ModuleContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_module);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(40);
			match(T__0);
			setState(41);
			match(IDENTIFIER);
			setState(42);
			match(T__1);
			setState(46);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__3) | (1L << T__5) | (1L << T__6) | (1L << T__8) | (1L << T__9) | (1L << T__12) | (1L << T__13) | (1L << T__14) | (1L << T__15) | (1L << T__16))) != 0)) {
				{
				{
				setState(43);
				unit();
				}
				}
				setState(48);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(49);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UnitContext extends ParserRuleContext {
		public UnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unit; }
	 
		public UnitContext() { }
		public void copyFrom(UnitContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ImportDefContext extends UnitContext {
		public PathContext path() {
			return getRuleContext(PathContext.class,0);
		}
		public IdentOrStarContext identOrStar() {
			return getRuleContext(IdentOrStarContext.class,0);
		}
		public ImportDefContext(UnitContext ctx) { copyFrom(ctx); }
	}
	public static class InstanceContext extends UnitContext {
		public InstanceModContext instanceMod() {
			return getRuleContext(InstanceModContext.class,0);
		}
		public InstanceContext(UnitContext ctx) { copyFrom(ctx); }
	}
	public static class ConstContext extends UnitContext {
		public TerminalNode IDENTIFIER() { return getToken(TntParser.IDENTIFIER, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public ConstContext(UnitContext ctx) { copyFrom(ctx); }
	}
	public static class ModuleNestedContext extends UnitContext {
		public ModuleContext module() {
			return getRuleContext(ModuleContext.class,0);
		}
		public ModuleNestedContext(UnitContext ctx) { copyFrom(ctx); }
	}
	public static class VarContext extends UnitContext {
		public TerminalNode IDENTIFIER() { return getToken(TntParser.IDENTIFIER, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public VarContext(UnitContext ctx) { copyFrom(ctx); }
	}
	public static class OperContext extends UnitContext {
		public OperDefContext operDef() {
			return getRuleContext(OperDefContext.class,0);
		}
		public OperContext(UnitContext ctx) { copyFrom(ctx); }
	}
	public static class AssumeContext extends UnitContext {
		public IdentOrHoleContext identOrHole() {
			return getRuleContext(IdentOrHoleContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public AssumeContext(UnitContext ctx) { copyFrom(ctx); }
	}
	public static class TypedefContext extends UnitContext {
		public TerminalNode IDENTIFIER() { return getToken(TntParser.IDENTIFIER, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TypedefContext(UnitContext ctx) { copyFrom(ctx); }
	}

	public final UnitContext unit() throws RecognitionException {
		UnitContext _localctx = new UnitContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_unit);
		try {
			setState(78);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				_localctx = new ConstContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(51);
				match(T__3);
				setState(52);
				match(IDENTIFIER);
				setState(53);
				match(T__4);
				setState(54);
				type(0);
				}
				break;
			case 2:
				_localctx = new VarContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(55);
				match(T__5);
				setState(56);
				match(IDENTIFIER);
				setState(57);
				match(T__4);
				setState(58);
				type(0);
				}
				break;
			case 3:
				_localctx = new AssumeContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(59);
				match(T__6);
				setState(60);
				identOrHole();
				setState(61);
				match(T__7);
				setState(62);
				expr(0);
				}
				break;
			case 4:
				_localctx = new OperContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(64);
				operDef();
				}
				break;
			case 5:
				_localctx = new ModuleNestedContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(65);
				module();
				}
				break;
			case 6:
				_localctx = new InstanceContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(66);
				instanceMod();
				}
				break;
			case 7:
				_localctx = new TypedefContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(67);
				match(T__8);
				setState(68);
				match(IDENTIFIER);
				}
				break;
			case 8:
				_localctx = new TypedefContext(_localctx);
				enterOuterAlt(_localctx, 8);
				{
				setState(69);
				match(T__8);
				setState(70);
				match(IDENTIFIER);
				setState(71);
				match(T__7);
				setState(72);
				type(0);
				}
				break;
			case 9:
				_localctx = new ImportDefContext(_localctx);
				enterOuterAlt(_localctx, 9);
				{
				setState(73);
				match(T__9);
				setState(74);
				path();
				setState(75);
				match(T__10);
				setState(76);
				identOrStar();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OperDefContext extends ParserRuleContext {
		public QualifierContext qualifier() {
			return getRuleContext(QualifierContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(TntParser.IDENTIFIER, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public OperDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operDef; }
	}

	public final OperDefContext operDef() throws RecognitionException {
		OperDefContext _localctx = new OperDefContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_operDef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			qualifier();
			setState(81);
			match(IDENTIFIER);
			setState(83);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LPAREN) {
				{
				setState(82);
				params();
				}
			}

			setState(87);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__4) {
				{
				setState(85);
				match(T__4);
				setState(86);
				type(0);
				}
			}

			setState(89);
			match(T__7);
			setState(90);
			expr(0);
			setState(92);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__11) {
				{
				setState(91);
				match(T__11);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class QualifierContext extends ParserRuleContext {
		public QualifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_qualifier; }
	}

	public final QualifierContext qualifier() throws RecognitionException {
		QualifierContext _localctx = new QualifierContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_qualifier);
		try {
			setState(102);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(94);
				match(T__12);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(95);
				match(T__13);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(96);
				match(T__14);
				setState(97);
				match(T__12);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(98);
				match(T__14);
				setState(99);
				match(T__13);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(100);
				match(T__15);
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(101);
				match(T__16);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamsContext extends ParserRuleContext {
		public TerminalNode LPAREN() { return getToken(TntParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(TntParser.RPAREN, 0); }
		public List<TerminalNode> IDENTIFIER() { return getTokens(TntParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(TntParser.IDENTIFIER, i);
		}
		public ParamsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_params; }
	}

	public final ParamsContext params() throws RecognitionException {
		ParamsContext _localctx = new ParamsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_params);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			match(LPAREN);
			setState(113);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IDENTIFIER) {
				{
				setState(105);
				match(IDENTIFIER);
				setState(110);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__17) {
					{
					{
					setState(106);
					match(T__17);
					setState(107);
					match(IDENTIFIER);
					}
					}
					setState(112);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(115);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstanceModContext extends ParserRuleContext {
		public List<TerminalNode> IDENTIFIER() { return getTokens(TntParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(TntParser.IDENTIFIER, i);
		}
		public TerminalNode LPAREN() { return getToken(TntParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(TntParser.RPAREN, 0); }
		public TerminalNode MUL() { return getToken(TntParser.MUL, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public InstanceModContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instanceMod; }
	}

	public final InstanceModContext instanceMod() throws RecognitionException {
		InstanceModContext _localctx = new InstanceModContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_instanceMod);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			match(T__0);
			setState(118);
			match(IDENTIFIER);
			setState(119);
			match(T__7);
			setState(120);
			match(IDENTIFIER);
			setState(121);
			match(LPAREN);
			setState(139);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case MUL:
				{
				setState(122);
				match(MUL);
				}
				break;
			case IDENTIFIER:
				{
				setState(123);
				match(IDENTIFIER);
				setState(124);
				match(T__7);
				setState(125);
				expr(0);
				setState(132);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(126);
						match(T__17);
						setState(127);
						match(IDENTIFIER);
						setState(128);
						match(T__7);
						setState(129);
						expr(0);
						}
						} 
					}
					setState(134);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
				}
				setState(137);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__17) {
					{
					setState(135);
					match(T__17);
					setState(136);
					match(MUL);
					}
				}

				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(141);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
	 
		public TypeContext() { }
		public void copyFrom(TypeContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class TypeRecContext extends TypeContext {
		public List<TerminalNode> IDENTIFIER() { return getTokens(TntParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(TntParser.IDENTIFIER, i);
		}
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public TypeRecContext(TypeContext ctx) { copyFrom(ctx); }
	}
	public static class TypeStrContext extends TypeContext {
		public TypeStrContext(TypeContext ctx) { copyFrom(ctx); }
	}
	public static class TypeIntContext extends TypeContext {
		public TypeIntContext(TypeContext ctx) { copyFrom(ctx); }
	}
	public static class TypeFunContext extends TypeContext {
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public TypeFunContext(TypeContext ctx) { copyFrom(ctx); }
	}
	public static class TypeListContext extends TypeContext {
		public TerminalNode LIST() { return getToken(TntParser.LIST, 0); }
		public TerminalNode LPAREN() { return getToken(TntParser.LPAREN, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(TntParser.RPAREN, 0); }
		public TypeListContext(TypeContext ctx) { copyFrom(ctx); }
	}
	public static class TypeTupleContext extends TypeContext {
		public TerminalNode LPAREN() { return getToken(TntParser.LPAREN, 0); }
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public TerminalNode RPAREN() { return getToken(TntParser.RPAREN, 0); }
		public TypeTupleContext(TypeContext ctx) { copyFrom(ctx); }
	}
	public static class TypeOperContext extends TypeContext {
		public TerminalNode LPAREN() { return getToken(TntParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(TntParser.RPAREN, 0); }
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public TypeOperContext(TypeContext ctx) { copyFrom(ctx); }
	}
	public static class TypeConstOrVarContext extends TypeContext {
		public TerminalNode IDENTIFIER() { return getToken(TntParser.IDENTIFIER, 0); }
		public TypeConstOrVarContext(TypeContext ctx) { copyFrom(ctx); }
	}
	public static class TypeParenContext extends TypeContext {
		public TerminalNode LPAREN() { return getToken(TntParser.LPAREN, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(TntParser.RPAREN, 0); }
		public TypeParenContext(TypeContext ctx) { copyFrom(ctx); }
	}
	public static class TypeBoolContext extends TypeContext {
		public TypeBoolContext(TypeContext ctx) { copyFrom(ctx); }
	}
	public static class TypeUnionRecContext extends TypeContext {
		public List<TypeUnionRecOneContext> typeUnionRecOne() {
			return getRuleContexts(TypeUnionRecOneContext.class);
		}
		public TypeUnionRecOneContext typeUnionRecOne(int i) {
			return getRuleContext(TypeUnionRecOneContext.class,i);
		}
		public TypeUnionRecContext(TypeContext ctx) { copyFrom(ctx); }
	}
	public static class TypeSetContext extends TypeContext {
		public TerminalNode SET() { return getToken(TntParser.SET, 0); }
		public TerminalNode LPAREN() { return getToken(TntParser.LPAREN, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(TntParser.RPAREN, 0); }
		public TypeSetContext(TypeContext ctx) { copyFrom(ctx); }
	}

	public final TypeContext type() throws RecognitionException {
		return type(0);
	}

	private TypeContext type(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		TypeContext _localctx = new TypeContext(_ctx, _parentState);
		TypeContext _prevctx = _localctx;
		int _startState = 12;
		enterRecursionRule(_localctx, 12, RULE_type, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(218);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,19,_ctx) ) {
			case 1:
				{
				_localctx = new TypeOperContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(144);
				match(LPAREN);
				setState(153);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__20) | (1L << T__21) | (1L << T__22) | (1L << T__23) | (1L << SET) | (1L << LIST) | (1L << LPAREN) | (1L << IDENTIFIER))) != 0)) {
					{
					setState(145);
					type(0);
					setState(150);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
					while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
						if ( _alt==1 ) {
							{
							{
							setState(146);
							match(T__17);
							setState(147);
							type(0);
							}
							} 
						}
						setState(152);
						_errHandler.sync(this);
						_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
					}
					}
				}

				setState(156);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__17) {
					{
					setState(155);
					match(T__17);
					}
				}
